devops/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iron-bank
spec:
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      name: iron-bank
      annotations:
        instrumentation.opentelemetry.io/inject-java: "echo-instrumentation"
    spec:
      containers:
      - name: iron-bank-server
        image: iron-bank-server
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "512Mi"
