devops/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iron-bank
spec:
  selector:
  ports:
  - name: http
    port: 8080
