devops/k8s/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: iron-bank
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`iron-bank.app.tribuz.com.br`)
    services:
    - name: iron-bank
      passHostHeader: true
      port: 8080
  tls:
    secretName: services/application-tls
